--- a/qty.html
+++ b/qty.html
@@ -17,7 +17,7 @@
 		input.qtyminus { width:25px; height:25px;}
 	</style>
 </head>
-<title></title>
+<title>Quantity Example</title>
 <body>
 	<form id='myform' method='POST' action='#'>
 		<input type='button' value='-' class='qtyminus' field='quantity' />
